scripts/nullness/nullgtn/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8.txt
../nullgtn/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Dorm.java:37: error: [assignment] incompatible types in assignment.
            rooms[i] = new Room(this, i, femaleOnly);
                       ^
  found   : @UnderInitialization(edu.umw.cpsc.collegediversity.Room.class) @NonNull Room
  required: @Initialized @NonNull Room
../nullgtn/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Dorm.java:37: error: [argument] incompatible argument for parameter dorm of Room constructor.
            rooms[i] = new Room(this, i, femaleOnly);
                                ^
  found   : @UnderInitialization(edu.umw.cpsc.collegediversity.Dorm.class) @NonNull Dorm
  required: @Initialized @NonNull Dorm
../nullgtn/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Group.java:40: error: [return] incompatible types in return.
        return members.get(s);
                          ^
  type of expression: @Initialized @Nullable Membership
  method return type: @Initialized @NonNull Membership
../nullgtn/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Group.java:48: error: [return] incompatible types in return.
        return members.keys();
                           ^
  type of expression: Enumeration<@KeyFor("this.members") Student>
  method return type: Enumeration<Student>
../nullgtn/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Group.java:89: error: [argument] incompatible argument for parameter key of Hashtable.remove.
            members.remove(s);
                           ^
  found   : @Initialized @Nullable Student
  required: @Initialized @NonNull Object
../nullgtn/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Student.java:238: error: [dereference.of.nullable] dereference of possibly-null reference dormRoom
        Dorm d = dormRoom.getDorm();
                 ^
../nullgtn/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Student.java:264: error: [argument] incompatible argument for parameter s2 of Student.encounter.
                    encounter(s);
                              ^
  found   : @Initialized @Nullable Student
  required: @Initialized @NonNull Student
../nullgtn/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Student.java:448: error: [return] incompatible types in return.
        return dormRoom;
               ^
  type of expression: @Initialized @Nullable Room
  method return type: @Initialized @NonNull Room
../nullgtn/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Sim.java:228: error: [dereference.of.nullable] dereference of possibly-null reference outputFiles
            for (int i = 0; i < outputFiles.length; i++) {
                                ^
9 errors
